--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "framer-motion": "^4.1.17",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.4",
     "react-scripts": "4.0.3",
+    "redux": "^4.1.0",
     "sass": "^1.36.0",
     "typescript": "^4.3.5",
     "web-vitals": "^1.1.2"
