--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@types/node": "^12.20.17",
     "@types/react": "^17.0.15",
     "@types/react-dom": "^17.0.9",
+    "axios": "^0.21.1",
+    "dotenv": "^8.2.0",
     "framer-motion": "^4.1.17",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -23,8 +25,10 @@
     "react-scripts": "4.0.3",
     "redux": "^4.1.0",
     "sass": "^1.36.0",
+    "socket.io-client": "^4.1.3",
     "typescript": "^4.3.5",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "websocket": "^1.0.34"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -51,6 +55,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react-router-dom": "^5.1.8"
+    "@types/react-router-dom": "^5.1.8",
+    "@types/websocket": "^1.0.4"
   }
 }
