--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.21.1",
     "dotenv": "^8.2.0",
     "framer-motion": "^4.1.17",
+    "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.12.2",
@@ -33,6 +34,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "deploy": "react-scripts build && gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
