--- a/package.json
+++ b/package.json
@@ -60,5 +60,6 @@
   "devDependencies": {
     "@types/react-router-dom": "^5.1.8",
     "@types/websocket": "^1.0.4"
-  }
+  },
+  "homepage": "https://kristianespina.github.io/ethereal-chat/"
 }
